# python-user-agents

./: .gitignore  AUTHORS.txt  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
user_agents/: __init__.py  parsers.py  tests.py
