[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user-agents-ng"
version = "3.0.0"
description = "A maintained successor to user-agents: identify devices (phones, tablets) and their capabilities by parsing browser user agent strings."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Selwin Ong" },
]
maintainers = [
    { name = "Saif Ali", email = "saifalimz@gmail.com" },
]
keywords = ["user agent", "user-agents", "browser", "device", "detection", "parser", "mobile", "tablet", "bot"]
dependencies = [
    "ua-parser>=0.10.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/SAKMZ/python-user-agents"
Repository = "https://github.com/SAKMZ/python-user-agents"
Issues = "https://github.com/SAKMZ/python-user-agents/issues"

[tool.setuptools]
packages = ["user_agents"]

[tool.setuptools.package-data]
user_agents = ["devices.json", "py.typed"]
